@@ -1,23 +1,21 @@
 package com.petpick.petpick.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.petpick.petpick.dto.OrderDTO;
-import com.petpick.petpick.dto.OrderItemDTO;
+import com.petpick.petpick.dto.OrderDetailDTO;
 import com.petpick.petpick.dto.OrderSummaryDTO;
 import com.petpick.petpick.entity.Order;
-import com.petpick.petpick.entity.OrderDetail;
 import com.petpick.petpick.repository.OrderDetailRepository;
 import com.petpick.petpick.repository.OrderRepository;
 
 import lombok.RequiredArgsConstructor;
 
 /**
- * 讀取面（Queries）：給前端的訂單總覽與單筆明細。 回傳一律為 DTO，避免直接曝露 Entity。
+ * 讀取面（Queries）：給前端的訂單總覽與單筆明細。回傳一律為 DTO，避免直接曝露 Entity。
  */
 @Service
 @RequiredArgsConstructor
@@ -27,50 +25,59 @@ public class OrderQueryService {
     private final OrderRepository orderRepo;
     private final OrderDetailRepository detailRepo;
 
+    /** 訂單總覽（列表） */
     public List<OrderSummaryDTO> listByUser(Integer userId) {
         return orderRepo.findByUserIdOrderByCreatedAtDesc(userId).stream()
-                .map(this::toSummary).collect(Collectors.toList());
+                .map(this::toSummary)
+                .toList();
     }
 
+    /** 單筆訂單（含明細） */
     public OrderDTO getOne(Integer orderId) {
-        Order o = orderRepo.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Order not found: " + orderId));
+        Order o = orderRepo.findById(orderId).orElseThrow();
         var details = detailRepo.findByOrder_OrderId(orderId);
-        return toDTO(o, details);
+
+        OrderDTO dto = new OrderDTO();
+        dto.setOrderId(o.getOrderId());
+        dto.setMerchantTradeNo(o.getMerchantTradeNo());
+        dto.setTradeNo(o.getTradeNo());
+        dto.setTotalPrice(o.getTotalPrice());
+        dto.setStatus(o.getStatus());
+        dto.setCreatedAt(o.getCreatedAt());
+
+        dto.setShippingType(o.getShippingType());
+        dto.setAddr(o.getAddr());
+        dto.setReceiverName(o.getReceiverName());
+        dto.setReceiverPhone(o.getReceiverPhone());
+
+        dto.setStoreId(o.getStoreId());
+        dto.setStoreName(o.getStoreName());
+        dto.setStoreAddress(o.getStoreAddress());
+        dto.setLogisticsId(o.getLogisticsId());
+        dto.setTrackingNo(o.getTrackingNo());
+
+        dto.setItems(details.stream()
+                .map(d -> new OrderDetailDTO(
+                        d.getId(),
+                        o.getOrderId(),
+                        d.getProduct() != null ? d.getProduct().getProductId() : null,
+                        d.getProduct() != null ? d.getProduct().getPname() : null,
+                        d.getUnitPrice(),
+                        d.getQuantity(),
+                        d.getSubtotal()))
+                .toList());
+
+        return dto;
     }
 
+    // ===== helpers =====
     private OrderSummaryDTO toSummary(Order o) {
         OrderSummaryDTO dto = new OrderSummaryDTO();
         dto.setOrderId(o.getOrderId());
         dto.setCreatedAt(o.getCreatedAt());
         dto.setTotalPrice(o.getTotalPrice());
         dto.setStatus(o.getStatus());
-        return dto;
-    }
-
-    private OrderDTO toDTO(Order o, List<OrderDetail> details) {
-        OrderDTO dto = new OrderDTO();
-        dto.setOrderId(o.getOrderId());
-        dto.setStatus(o.getStatus());
-        dto.setTotalPrice(o.getTotalPrice());
-        dto.setCreatedAt(o.getCreatedAt());
-        dto.setReceiverName(o.getReceiverName());
-        dto.setReceiverPhone(o.getReceiverPhone());
-        dto.setShippingType(o.getShippingType());
-        dto.setAddr(o.getAddr());
-        dto.setStoreName(o.getStoreName());
-        dto.setStoreAddress(o.getStoreAddress());
-
-        dto.setItems(details.stream().map(d -> {
-            OrderItemDTO idto = new OrderItemDTO();
-            idto.setProductId(d.getProduct().getProductId());
-            // 依你的 Product 欄位名調整
-            idto.setPname(d.getProduct().getPname());
-            idto.setImageUrl(d.getProduct().getImageUrl());
-            idto.setPrice(d.getUnitPrice());
-            idto.setQuantity(d.getQuantity());
-            return idto;
-        }).collect(Collectors.toList()));
+        dto.setMerchantTradeNo(o.getMerchantTradeNo()); // 別漏 MTN
         return dto;
     }
 }
